# collab-workspace

./: .env.example  .gitignore  Readme.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-commit
apps/server/: .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
apps/server/alembic/: env.py
apps/server/alembic/versions/: ed4a80e8f7ba_initial_database_schema.py
apps/server/app/: main.py
apps/server/app/api/: router.py
apps/server/app/api/routes/: auth.py  documents.py  health.py  workspaces.py
apps/server/app/core/: config.py  redis.py
apps/server/app/db/: base.py  session.py
apps/server/app/db/models/: __init__.py  document.py  user.py  workspace.py
apps/web/: .prettierignore  eslint.config.js  eslint.config.mjs  package-lock.json  package.json
apps/web/src/app/: page.tsx
apps/web/src/shared/ui/: button.tsx
